[package]
name = "ut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[test]]
name = "first_module_test"
path = "src/first_module/tests.rs"

[[test]]
name = "first_module"
path = "src/first_module/first_module.rs"
